# llm_from_scratch

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
tests/: test_llm_from_scratch.py
