[tool.poetry]
name = "llm-from-scratch"
version = "0.1.0"
description = ""
authors = ["Ignat <ignatlevagin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pylzma = "^0.5.0"
jupyter = "^1.0.0"
torch = "^2.0.1"
pre-commit = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
priority = "default"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
